--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/typeorm": "^7.1.5",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "apollo-server-core": "^3.13.0",
     "apollo-server-express": "^2.17.0",
     "aws-sdk": "^2.802.0",
     "bcrypt": "^5.0.0",
@@ -52,7 +53,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/schematics": "^7.3.1",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
@@ -69,7 +70,7 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.3"
   },
   "jest": {
     "moduleNameMapper": {
