--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=prod nest start",
-    "start:dev": "cross-env NODE_ENV=dev nest start --watch",
+    "start:dev": "cross-env NODE_ENV=dev IS_TS_NODE=true ts-node -r tsconfig-paths/register src/main.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -41,6 +41,7 @@
     "graphql-tools": "^6.2.3",
     "joi": "^17.13.3",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.3",
     "pg": "^8.12.0",
     "psql": "0.0.1",
     "reflect-metadata": "^0.1.13",
@@ -74,7 +75,7 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "^src/(.*)$": "<rootDir>/$1"
+      "^@app/(.*)$": "<rootDir>/$1"
     },
     "moduleFileExtensions": [
       "js",
@@ -93,5 +94,8 @@
       ".entity.ts",
       ".constants.ts"
     ]
+  },
+  "_moduleAliases": {
+    "@app": "./dist"
   }
 }
