--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "@typescript-eslint/parser": "3.0.2",
     "eslint": "7.1.0",
     "eslint-config-prettier": "^6.10.0",
-    "jest": "26.0.1",
+    "jest": "^29.7.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "26.1.0",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
