--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=prod nest start",
-    "start:dev": "cross-env NODE_ENV=dev IS_TS_NODE=true ts-node -r tsconfig-paths/register src/main.ts",
+    "start:dev": "cross-env NODE_ENV=dev ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -70,7 +70,8 @@
     "ts-jest": "^29.2.5",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
-    "tsconfig-paths": "^3.9.0",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.3"
   },
   "jest": {
@@ -94,8 +95,5 @@
       ".entity.ts",
       ".constants.ts"
     ]
-  },
-  "_moduleAliases": {
-    "@app": "./dist"
   }
 }
