--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=prod nest start",
-    "start:dev": "cross-env NODE_ENV=dev ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main.ts",
+    "start:dev": "cross-env NODE_ENV=dev ts-node-dev --respawn -r tsconfig-paths/register src/main.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
