--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "form-data": "^3.0.1",
     "got": "^11.8.6",
     "graphql": "^15.3.0",
+    "graphql-query-complexity": "^1.0.0",
     "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^6.2.3",
     "joi": "^17.13.3",
